WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248161
[WebIDL] reportException() should be called on global object of the callback
https://bugs.webkit.org/show_bug.cgi?id=248161
Summary
[WebIDL] reportException() should be called on global object of the callback
Alexey Shvayka
Reported
2022-11-20 19:30:00 PST
This would align WebKit with other browsers, yet the specs are unclear about the target realm.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-24 17:36:02 PST
<
rdar://problem/102654179
>
Alexey Shvayka
Comment 2
2022-11-24 17:37:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6798
EWS
Comment 3
2022-11-28 14:08:30 PST
Committed
257086@main
(b370d4916a70): <
https://commits.webkit.org/257086@main
> Reviewed commits have been landed. Closing PR #6798 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug